--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hello World</h1>
-</body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus
+      reiciendis assumenda unde quis quae mollitia neque amet sunt itaque labore
+      aspernatur laborum ducimus omnis ipsa maiores corporis, harum suscipit
+      architecto.
+    </p>
+  </body>
 </html>
